package mahjong;

public interface Tile {
    boolean isJihai();

    boolean isKazuhai();

    boolean isYaotyuhai();
}
